<resources>
    <string name="app_name">Calculator</string>
    <string name="_1" translatable="false">1</string>
    <string name="_2" translatable="false">2</string>
    <string name="_3" translatable="false">3</string>
    <string name="_4" translatable="false">4</string>
    <string name="_5" translatable="false">5</string>
    <string name="_6" translatable="false">6</string>
    <string name="_7" translatable="false">7</string>
    <string name="_8" translatable="false">8</string>
    <string name="_9" translatable="false">9</string>
    <string name="_0" translatable="false">0</string>
    <string name="_plus" translatable="false">+</string>
    <string name="_minus" translatable="false">-</string>
    <string name="_multiply" translatable="false">*</string>
    <string name="_divide" translatable="false">/</string>
    <string name="_result" translatable="false">=</string>
    <string name="_clear_one" translatable="false">ce</string>
    <string name="_clear_all" translatable="false">ac</string>
    <string name="_percent" translatable="false">%</string>
    <string name="_point" translatable="false">.</string>
    <string name="_load">loading…</string>
    <string name="_console">console</string>
    <string name="your_surname">Your surname</string>
    <string name="your_age">Your age</string>
    <string name="your_e_mail">Your e-mail</string>
    <string name="_return">Return</string>
    <string name="your_name">Your name</string>
    <string name="settings">Settings</string>
    <string name="theme_night">Night mode</string>
    <string name="theme_light">Light mode</string>
</resources>