<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/sing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/purple_700"
        android:textSize="@dimen/sing" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/console"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="24"
            android:hint="@string/_console"
            android:inputType="numberDecimal" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="4">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_minus"
                style="@style/calc_operation_button_style"
                android:text="@string/_minus" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_plus"
                style="@style/calc_operation_button_style"
                android:text="@string/_plus" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_multiply"
                style="@style/calc_operation_button_style"
                android:text="@string/_multiply" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_divide"
                style="@style/calc_operation_button_style"
                android:text="@string/_divide" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_1"
                style="@style/calc_number_button_style"
                android:text="@string/_1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_2"
                style="@style/calc_number_button_style"
                android:text="@string/_2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_3"
                style="@style/calc_number_button_style"
                android:text="@string/_3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_percent"
                style="@style/calc_operation_button_style"
                android:text="@string/_percent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_4"
                style="@style/calc_number_button_style"
                android:text="@string/_4" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_5"
                style="@style/calc_number_button_style"
                android:text="@string/_5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_6"
                style="@style/calc_number_button_style"
                android:text="@string/_6" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_ce"
                style="@style/calc_operation_button_style"
                android:layout_row="0"
                android:text="@string/_clear_one" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_7"
                style="@style/calc_number_button_style"
                android:text="@string/_7" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_8"
                style="@style/calc_number_button_style"
                android:text="@string/_8" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_9"
                style="@style/calc_number_button_style"
                android:text="@string/_9" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_ac"
                style="@style/calc_operation_button_style"
                android:text="@string/_clear_all" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_point"
                style="@style/calc_number_button_style"
                android:text="@string/_point" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_0"
                style="@style/calc_number_button_style"
                android:text="@string/_0" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_result"
                style="@style/calc_operation_button_style"
                android:layout_columnSpan="2"
                android:layout_gravity="fill"
                android:text="@string/_result" />

        </GridLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:onClick="openSettingsActivity"
            app:backgroundTint="@color/grey"/>

    </LinearLayout>
</FrameLayout>